performance-comparisons/v10.6/results/report_3_postgresql_unbounded.md
### Store times avg (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| RoleStore.GetByNames | avg | 1ms | 119ms | 118ms | 8901.76
| ChannelBookmarkStore.UpdateSortOrder | avg | 6ms | 431ms | 425ms | 7492.99
| TokenStore.Cleanup | avg | 1ms | 65ms | 64ms | 6557.58
| ChannelBookmarkStore.Get | avg | 1ms | 63ms | 62ms | 4252.79
| ChannelStore.Get | avg | 1ms | 56ms | 55ms | 4031.70
| UserAccessTokenStore.GetByToken | avg | 1ms | 50ms | 49ms | 3499.37
| CommandWebhookStore.Cleanup | avg | 1ms | 28ms | 27ms | 3107.31
| ChannelStore.GetMembers | avg | 4ms | 116ms | 112ms | 3063.94
| JobStore.Get | avg | 1ms | 35ms | 34ms | 2635.52
| EmojiStore.GetMultipleByName | avg | 2ms | 48ms | 46ms | 2561.02
| DraftStore.Get | avg | 1ms | 33ms | 32ms | 2201.95
| StatusStore.SaveOrUpdate | avg | 2ms | 52ms | 50ms | 2104.89
| RoleStore.ChannelHigherScopedPermissions | avg | 3ms | 62ms | 59ms | 2069.09
| ChannelStore.GetChannelUnread | avg | 1ms | 30ms | 29ms | 1987.43
| FileInfoStore.GetForPost | avg | 1ms | 29ms | 28ms | 1980.55
| StatusStore.Get | avg | 1ms | 28ms | 27ms | 1874.97
| ChannelStore.GetPinnedPostCount | avg | 1ms | 25ms | 24ms | 1851.25
| PostAcknowledgementStore.GetForPosts | avg | 2ms | 34ms | 32ms | 1788.95
| PostPriorityStore.GetForPosts | avg | 2ms | 35ms | 33ms | 1787.25
| LinkMetadataStore.Get | avg | 1ms | 24ms | 23ms | 1772.26
| FileInfoStore.GetByIds | avg | 1ms | 25ms | 24ms | 1756.45
| ChannelStore.UpdateSidebarChannelsByPreferences | avg | 1ms | 13ms | 12ms | 1737.59
| TeamStore.Get | avg | 1ms | 22ms | 21ms | 1700.60
| PostPriorityStore.GetForPost | avg | 1ms | 22ms | 21ms | 1650.15
| PostStore.GetEtag | avg | 2ms | 27ms | 25ms | 1644.02
| EmojiStore.GetByName | avg | 1ms | 22ms | 21ms | 1640.05
| UserStore.GetProfileByIds | avg | 2ms | 28ms | 26ms | 1629.86
| ThreadStore.GetThreadFollowers | avg | 1ms | 21ms | 20ms | 1621.59
| ThreadStore.GetMembershipForUser | avg | 1ms | 23ms | 22ms | 1579.98
| PostStore.GetSingle | avg | 1ms | 23ms | 22ms | 1525.82
| PostStore.Get | avg | 3ms | 52ms | 49ms | 1512.65
| PostPersistentNotificationStore.GetSingle | avg | 1ms | 20ms | 19ms | 1510.41
| ThreadStore.GetTeamsUnreadForUser | avg | 2ms | 30ms | 28ms | 1480.92
| ChannelStore.IsReadOnlyChannel | avg | 1ms | 21ms | 20ms | 1470.93
| FileInfoStore.Get | avg | 1ms | 22ms | 21ms | 1457.97
| PostAcknowledgementStore.GetForPost | avg | 1ms | 19ms | 18ms | 1441.36
| PostPersistentNotificationStore.Get | avg | 1ms | 21ms | 20ms | 1436.08
| ChannelStore.GetChannels | avg | 2ms | 27ms | 25ms | 1431.29
| ChannelStore.GetChannelsByUser | avg | 2ms | 25ms | 23ms | 1382.60
| JobStore.GetAllByStatus | avg | 2ms | 26ms | 24ms | 1368.11
| SharedChannelStore.HasChannel | avg | 1ms | 18ms | 17ms | 1365.49
| ThreadStore.Get | avg | 1ms | 18ms | 17ms | 1353.89
| PreferenceStore.Get | avg | 2ms | 23ms | 21ms | 1331.91
| PostStore.GetPostsAfter | avg | 2ms | 32ms | 30ms | 1262.69
| ChannelStore.GetChannelsWithUnreadsAndWithMentions | avg | 2ms | 21ms | 19ms | 1249.58
| UserStore.Get | avg | 1ms | 18ms | 17ms | 1241.17
| GroupStore.GetGroups | avg | 2ms | 22ms | 20ms | 1226.95
| ChannelStore.GetFileCount | avg | 2ms | 22ms | 20ms | 1214.39
| DraftStore.GetDraftsForUser | avg | 2ms | 27ms | 25ms | 1197.31
| StatusStore.GetByIds | avg | 1ms | 18ms | 17ms | 1196.99
| UserStore.GetProfilesByUsernames | avg | 2ms | 23ms | 21ms | 1158.81
| ChannelBookmarkStore.Save | avg | 6ms | 74ms | 68ms | 1147.74
| UserTermsOfServiceStore.GetByUser | avg | 1ms | 16ms | 15ms | 1144.59
| SessionStore.GetSessionsWithActiveDeviceIds | avg | 2ms | 21ms | 19ms | 1143.14
| ChannelStore.GetMembersForUser | avg | 2ms | 28ms | 26ms | 1136.29
| ThreadStore.MarkAllAsReadByChannels | avg | 1ms | 14ms | 13ms | 1133.27
| ChannelStore.SearchGroupChannels | avg | 3ms | 34ms | 31ms | 1123.37
| TeamStore.GetTeamsByUserId | avg | 2ms | 19ms | 17ms | 1121.50
| TeamStore.GetAllPage | avg | 1ms | 17ms | 16ms | 1114.99
| UserStore.GetProfilesNotInChannel | avg | 4ms | 45ms | 41ms | 1094.24
| PostStore.Delete | avg | 10ms | 114ms | 104ms | 1081.11
| GroupStore.AdminRoleGroupsForSyncableMember | avg | 1ms | 16ms | 15ms | 1077.35
| PreferenceStore.GetAll | avg | 2ms | 22ms | 20ms | 1041.02
| UserStore.GetByUsername | avg | 2ms | 20ms | 18ms | 1011.74
| TeamStore.GetChannelUnreadsForAllTeams | avg | 2ms | 19ms | 17ms | 1003.52
| PreferenceStore.DeleteCategoryAndName | avg | 3ms | 32ms | 29ms | 979.34
| ChannelStore.GetGuestCount | avg | 2ms | 19ms | 17ms | 977.43
| ThreadStore.GetThreadsForUser | avg | 3ms | 31ms | 28ms | 970.70
| SystemStore.GetByName | avg | 1ms | 9ms | 8ms | 960.94
| ThreadStore.GetTotalThreads | avg | 2ms | 17ms | 15ms | 934.14
| ThreadStore.GetTotalUnreadThreads | avg | 2ms | 17ms | 15ms | 918.57
| ThreadStore.GetTotalUnreadMentions | avg | 2ms | 19ms | 17ms | 913.14
| PostStore.GetPostIdBeforeTime | avg | 1ms | 11ms | 10ms | 909.83
| UserStore.GetUnreadCount | avg | 2ms | 20ms | 18ms | 906.48
| UserStore.GetMany | avg | 1ms | 14ms | 13ms | 900.75
| ChannelStore.GetMemberLastViewedAt | avg | 1ms | 13ms | 12ms | 900.28
| TeamStore.GetTeamsForUser | avg | 2ms | 16ms | 14ms | 892.72
| PostPersistentNotificationStore.DeleteExpired | avg | 2ms | 17ms | 15ms | 886.35
| ChannelBookmarkStore.GetBookmarksForChannelSince | avg | 2ms | 16ms | 14ms | 879.55
| ChannelStore.GetMemberForPost | avg | 4ms | 35ms | 31ms | 876.25
| ChannelStore.IncrementMentionCount | avg | 1ms | 11ms | 10ms | 866.49
| ClusterDiscoveryStore.SetLastPingAt | avg | 2ms | 22ms | 20ms | 848.53
| PostStore.GetPostsBefore | avg | 3ms | 26ms | 23ms | 841.48
| ThreadStore.GetThreadForUser | avg | 4ms | 37ms | 33ms | 836.66
| ThreadStore.GetTotalUnreadUrgentMentions | avg | 2ms | 17ms | 15ms | 834.64
| GroupStore.GetByName | avg | 1ms | 12ms | 11ms | 778.95
| ChannelStore.Save | avg | 8ms | 68ms | 60ms | 760.48
| TeamStore.GetMember | avg | 1ms | 11ms | 10ms | 759.85
| ThreadStore.MaintainMembership | avg | 3ms | 27ms | 24ms | 758.57
| StatusStore.UpdateLastActivityAt | avg | 2ms | 17ms | 15ms | 753.20
| UserStore.IsEmpty | avg | 1ms | 7ms | 6ms | 736.98
| ChannelStore.CreateDirectChannel | avg | 13ms | 110ms | 97ms | 722.72
| PostStore.GetPostsByThread | avg | 4ms | 29ms | 25ms | 700.08
| SessionStore.GetLRUSessions | avg | 1ms | 11ms | 10ms | 693.44
| ChannelStore.GetMember | avg | 2ms | 14ms | 12ms | 678.48
| ChannelStore.GetAllChannelMembersForUser | avg | 2ms | 17ms | 15ms | 655.21
| ReactionStore.GetForPost | avg | 2ms | 17ms | 15ms | 654.18
| ThreadStore.GetThreadUnreadReplyCount | avg | 4ms | 30ms | 26ms | 652.74
| WebhookStore.GetOutgoingByTeam | avg | 4ms | 28ms | 24ms | 645.52
| DraftStore.Delete | avg | 2ms | 16ms | 14ms | 642.86
| DraftStore.Upsert | avg | 2ms | 17ms | 15ms | 633.94
| UserStore.Update | avg | 5ms | 36ms | 31ms | 616.88
| PostStore.SetPostReminder | avg | 4ms | 27ms | 23ms | 613.40
| UserStore.GetAllProfiles | avg | 2ms | 15ms | 13ms | 604.96
| PreferenceStore.Save | avg | 5ms | 34ms | 29ms | 589.65
| ChannelStore.CreateSidebarCategory | avg | 15ms | 105ms | 90ms | 588.12
| UserStore.GetForLogin | avg | 2ms | 12ms | 10ms | 586.25
| PluginStore.List | avg | 2ms | 11ms | 9ms | 578.60
| SessionStore.GetSessionsExpired | avg | 1ms | 8ms | 7ms | 567.26
| JobStore.UpdateOptimistically | avg | 2ms | 14ms | 12ms | 555.08
| PostStore.GetPostIdAfterTime | avg | 1ms | 7ms | 6ms | 543.25
| ChannelStore.GetSidebarCategory | avg | 6ms | 40ms | 34ms | 532.04
| PostStore.Save | avg | 7ms | 46ms | 39ms | 531.21
| JobStore.UpdateStatusOptimistically | avg | 3ms | 17ms | 14ms | 518.86
| SessionStore.Get | avg | 3ms | 17ms | 14ms | 506.66
| ChannelStore.UpdateSidebarCategories | avg | 24ms | 141ms | 117ms | 493.06
| JobStore.UpdateStatus | avg | 2ms | 14ms | 12ms | 491.48
| ProductNoticesStore.ClearOldNotices | avg | 13ms | 75ms | 62ms | 486.81
| FileInfoStore.Save | avg | 3ms | 18ms | 15ms | 476.50
| FileInfoStore.AttachToPost | avg | 4ms | 23ms | 19ms | 472.53
| ThreadStore.UpdateMembership | avg | 2ms | 12ms | 10ms | 469.18
| PostStore.GetPostsSince | avg | 7ms | 39ms | 32ms | 468.59
| SessionStore.Remove | avg | 2ms | 11ms | 9ms | 461.98
| ChannelStore.CreateInitialSidebarCategories | avg | 12ms | 66ms | 54ms | 461.76
| ThreadStore.MarkAllAsReadByTeam | avg | 3ms | 17ms | 14ms | 454.02
| ChannelStore.GetByName | avg | 3ms | 18ms | 15ms | 441.26
| PluginStore.Delete | avg | 1ms | 6ms | 5ms | 439.14
| FileInfoStore.SetContent | avg | 5ms | 26ms | 21ms | 422.76
| ThreadStore.MarkAsRead | avg | 2ms | 12ms | 10ms | 418.24
| PostStore.AnalyticsPostCount | avg | 261ms | 1.354s | 1.093s | 418.12
| PostStore.Update | avg | 9ms | 48ms | 39ms | 411.29
| ChannelBookmarkStore.Delete | avg | 3ms | 17ms | 14ms | 410.55
| ChannelStore.GetSidebarCategoriesForTeamForUser | avg | 10ms | 50ms | 40ms | 389.19
| SessionStore.UpdateLastActivityAt | avg | 3ms | 13ms | 10ms | 384.64
| ProductNoticesStore.View | avg | 18ms | 85ms | 67ms | 373.68
| PluginStore.SetWithOptions | avg | 3ms | 14ms | 11ms | 369.87
| ChannelStore.SaveMember | avg | 20ms | 95ms | 75ms | 368.63
| SessionStore.Save | avg | 4ms | 19ms | 15ms | 352.12
| PostStore.GetPosts | avg | 3ms | 12ms | 9ms | 342.27
| ChannelStore.GetTeamChannels | avg | 11ms | 47ms | 36ms | 337.79
| DraftStore.DeleteDraftsAssociatedWithPost | avg | 5ms | 23ms | 18ms | 333.26
| ChannelStore.UpdateLastViewedAt | avg | 3ms | 12ms | 9ms | 322.73
| AuditStore.Save | avg | 2ms | 9ms | 7ms | 291.53
| ChannelStore.GetAllChannelMembersNotifyPropsForChannel | avg | 10ms | 39ms | 29ms | 277.34
| ChannelMemberHistoryStore.LogJoinEvent | avg | 2ms | 8ms | 6ms | 275.17
| UserStore.UpdateFailedPasswordAttempts | avg | 3ms | 10ms | 7ms | 269.06
| ChannelStore.GetPublicChannelsForTeam | avg | 12ms | 41ms | 29ms | 239.86
| PostStore.GetPostReminderMetadata | avg | 2ms | 7ms | 5ms | 228.73
| ChannelStore.GetMemberCount | avg | 14ms | 42ms | 28ms | 197.83
| LinkMetadataStore.Save | avg | 3ms | 8ms | 5ms | 193.23
| UserStore.Count | avg | 9ms | 27ms | 18ms | 189.72
| PostStore.SearchPostsForUser | avg | 28ms | 80ms | 52ms | 187.60
| TeamStore.SaveMember | avg | 19ms | 55ms | 36ms | 185.50
| UserStore.GetAllProfilesInChannel | avg | 136ms | 376ms | 240ms | 176.38
| UserStore.AutocompleteUsersInChannel | avg | 35ms | 89ms | 54ms | 155.12
| UserStore.UpdateLastLogin | avg | 4ms | 9ms | 5ms | 141.25
| UserStore.UpdateUpdateAt | avg | 4ms | 9ms | 5ms | 139.34
| UserStore.Search | avg | 26ms | 61ms | 35ms | 134.87
| ChannelStore.Autocomplete | avg | 32ms | 66ms | 34ms | 105.60
| ChannelStore.AutocompleteInTeamForSearch | avg | 57ms | 115ms | 58ms | 101.13
| TeamStore.GetTotalMemberCount | avg | 32ms | 60ms | 28ms | 87.85
| TeamStore.GetActiveMemberCount | avg | 35ms | 64ms | 29ms | 83.93
| UserStore.Save | avg | 65ms | 92ms | 27ms | 41.52
### Store times p99 (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| UserStore.GetProfilesNotInChannel | p99 | 5ms | 1.855s | 1.85s | 37373.74
| ChannelBookmarkStore.UpdateSortOrder | p99 | 10ms | 2.395s | 2.385s | 24030.23
| ChannelBookmarkStore.Get | p99 | 5ms | 830ms | 825ms | 16666.67
| RoleStore.GetByNames | p99 | 5ms | 803ms | 798ms | 16121.21
| JobStore.Get | p99 | 5ms | 770ms | 765ms | 14711.54
| ChannelStore.Get | p99 | 6ms | 757ms | 751ms | 13203.38
| ChannelStore.GetMembers | p99 | 10ms | 970ms | 960ms | 9746.06
| ChannelStore.GetChannelUnread | p99 | 5ms | 484ms | 479ms | 9606.47
| UserAccessTokenStore.GetByToken | p99 | 5ms | 459ms | 454ms | 9171.72
| FileInfoStore.GetForPost | p99 | 5ms | 461ms | 456ms | 9129.72
| StatusStore.Get | p99 | 5ms | 461ms | 456ms | 9126.07
| StatusStore.SaveOrUpdate | p99 | 8ms | 753ms | 745ms | 8884.92
| ChannelStore.GetPinnedPostCount | p99 | 5ms | 436ms | 431ms | 8638.29
| ChannelStore.GetChannelsByUser | p99 | 5ms | 432ms | 427ms | 8554.66
| LinkMetadataStore.Get | p99 | 5ms | 432ms | 427ms | 8550.52
| PostStore.GetSingle | p99 | 5ms | 425ms | 420ms | 8421.24
| ThreadStore.GetTeamsUnreadForUser | p99 | 7ms | 555ms | 548ms | 8295.52
| TeamStore.Get | p99 | 5ms | 418ms | 413ms | 8293.85
| FileInfoStore.GetByIds | p99 | 5ms | 412ms | 407ms | 8208.66
| PostStore.Get | p99 | 10ms | 822ms | 812ms | 8135.57
| ThreadStore.Get | p99 | 5ms | 405ms | 400ms | 8080.81
| PostPriorityStore.GetForPosts | p99 | 9ms | 759ms | 750ms | 7924.85
| PostAcknowledgementStore.GetForPosts | p99 | 9ms | 742ms | 733ms | 7850.43
| PostPersistentNotificationStore.GetSingle | p99 | 5ms | 395ms | 390ms | 7833.39
| FileInfoStore.Get | p99 | 5ms | 386ms | 381ms | 7626.54
| ThreadStore.GetMembershipForUser | p99 | 5ms | 412ms | 407ms | 7575.78
| PostAcknowledgementStore.GetForPost | p99 | 5ms | 379ms | 374ms | 7555.56
| ChannelStore.IsReadOnlyChannel | p99 | 5ms | 380ms | 375ms | 7514.57
| PostPriorityStore.GetForPost | p99 | 5ms | 378ms | 373ms | 7468.08
| EmojiStore.GetByName | p99 | 5ms | 373ms | 368ms | 7384.03
| PostStore.GetPostsAfter | p99 | 8ms | 609ms | 601ms | 7358.32
| DraftStore.Get | p99 | 7ms | 486ms | 479ms | 7326.64
| ThreadStore.GetThreadFollowers | p99 | 5ms | 401ms | 396ms | 7284.96
| UserStore.GetProfilesByUsernames | p99 | 5ms | 397ms | 392ms | 7159.75
| TeamStore.GetTeamsByUserId | p99 | 5ms | 358ms | 353ms | 7076.33
| ChannelStore.GetChannelsWithUnreadsAndWithMentions | p99 | 5ms | 358ms | 353ms | 7071.75
| RoleStore.ChannelHigherScopedPermissions | p99 | 7ms | 491ms | 484ms | 7065.69
| TeamStore.GetChannelUnreadsForAllTeams | p99 | 5ms | 363ms | 358ms | 6850.78
| ChannelStore.GetFileCount | p99 | 5ms | 336ms | 331ms | 6626.42
| ChannelStore.GetChannels | p99 | 7ms | 448ms | 441ms | 6594.11
| ThreadStore.GetTotalThreads | p99 | 5ms | 330ms | 325ms | 6507.69
| TeamStore.GetAllPage | p99 | 5ms | 328ms | 323ms | 6466.70
| UserTermsOfServiceStore.GetByUser | p99 | 5ms | 326ms | 321ms | 6426.44
| ThreadStore.GetTotalUnreadThreads | p99 | 5ms | 322ms | 317ms | 6344.32
| ThreadStore.GetTotalUnreadUrgentMentions | p99 | 5ms | 331ms | 326ms | 6269.23
| UserStore.GetProfileByIds | p99 | 7ms | 445ms | 438ms | 6238.89
| SharedChannelStore.HasChannel | p99 | 5ms | 315ms | 310ms | 6229.84
| UserStore.Get | p99 | 5ms | 310ms | 305ms | 6114.31
| GroupStore.AdminRoleGroupsForSyncableMember | p99 | 5ms | 307ms | 302ms | 6064.45
| GroupStore.GetGroups | p99 | 7ms | 395ms | 388ms | 5950.65
| ChannelStore.GetMembersForUser | p99 | 8ms | 452ms | 444ms | 5673.29
| TeamStore.GetTeamsForUser | p99 | 5ms | 287ms | 282ms | 5643.55
| ChannelBookmarkStore.GetBookmarksForChannelSince | p99 | 5ms | 270ms | 265ms | 5311.04
| ThreadStore.GetThreadsForUser | p99 | 9ms | 465ms | 456ms | 5256.37
| PostStore.GetEtag | p99 | 8ms | 440ms | 432ms | 5167.68
| ChannelStore.GetMemberForPost | p99 | 10ms | 489ms | 479ms | 5004.25
| DraftStore.GetDraftsForUser | p99 | 8ms | 410ms | 402ms | 4961.23
| TokenStore.Cleanup | p99 | 5ms | 244ms | 239ms | 4827.14
| ChannelStore.GetMemberLastViewedAt | p99 | 5ms | 243ms | 238ms | 4772.70
| ChannelBookmarkStore.Save | p99 | 10ms | 482ms | 472ms | 4764.24
| PostStore.SetPostReminder | p99 | 9ms | 427ms | 418ms | 4694.76
| PostStore.GetPostsBefore | p99 | 9ms | 417ms | 408ms | 4684.89
| StatusStore.GetByIds | p99 | 8ms | 362ms | 354ms | 4676.05
| PreferenceStore.GetAll | p99 | 9ms | 402ms | 393ms | 4551.62
| PreferenceStore.Get | p99 | 9ms | 406ms | 397ms | 4338.41
| UserStore.GetMany | p99 | 5ms | 218ms | 213ms | 4303.03
| GroupStore.GetByName | p99 | 5ms | 220ms | 215ms | 4303.01
| ChannelStore.UpdateSidebarCategories | p99 | 49ms | 2.17s | 2.121s | 4300.62
| ThreadStore.MaintainMembership | p99 | 9ms | 404ms | 395ms | 4275.72
| SessionStore.GetLRUSessions | p99 | 5ms | 218ms | 213ms | 4268.60
| PostStore.GetPostsByThread | p99 | 10ms | 427ms | 417ms | 4225.49
| SessionStore.GetSessionsWithActiveDeviceIds | p99 | 9ms | 385ms | 376ms | 4052.59
| TeamStore.GetMember | p99 | 5ms | 205ms | 200ms | 4001.63
| ReactionStore.GetForPost | p99 | 7ms | 276ms | 269ms | 3988.10
| ChannelStore.CreateDirectChannel | p99 | 25ms | 996ms | 971ms | 3889.63
| ChannelStore.UpdateSidebarChannelsByPreferences | p99 | 5ms | 194ms | 189ms | 3809.28
| ThreadStore.MarkAllAsReadByChannels | p99 | 5ms | 192ms | 187ms | 3762.09
| PostStore.GetPostIdBeforeTime | p99 | 5ms | 192ms | 187ms | 3753.50
| ChannelStore.GetGuestCount | p99 | 8ms | 325ms | 317ms | 3752.48
| UserStore.GetAllProfiles | p99 | 7ms | 277ms | 270ms | 3744.65
| UserStore.GetUnreadCount | p99 | 10ms | 368ms | 358ms | 3740.07
| PostStore.Delete | p99 | 24ms | 925ms | 901ms | 3695.86
| UserStore.GetForLogin | p99 | 6ms | 229ms | 223ms | 3607.91
| ThreadStore.GetTotalUnreadMentions | p99 | 10ms | 353ms | 343ms | 3600.62
| StatusStore.UpdateLastActivityAt | p99 | 6ms | 236ms | 230ms | 3548.77
| ChannelStore.SaveMember | p99 | 49ms | 1.753s | 1.704s | 3507.35
| SystemStore.GetByName | p99 | 5ms | 178ms | 173ms | 3478.68
| JobStore.UpdateOptimistically | p99 | 5ms | 181ms | 176ms | 3384.62
| UserStore.GetByUsername | p99 | 7ms | 244ms | 237ms | 3361.70
| ChannelStore.GetSidebarCategoriesForTeamForUser | p99 | 25ms | 848ms | 823ms | 3302.31
| SessionStore.Remove | p99 | 5ms | 167ms | 162ms | 3272.73
| ThreadStore.UpdateMembership | p99 | 5ms | 181ms | 176ms | 3249.30
| FileInfoStore.AttachToPost | p99 | 10ms | 327ms | 317ms | 3228.75
| ChannelStore.IncrementMentionCount | p99 | 6ms | 199ms | 193ms | 3202.73
| ChannelStore.GetTeamChannels | p99 | 25ms | 785ms | 760ms | 3095.70
| UserStore.IsEmpty | p99 | 5ms | 157ms | 152ms | 3060.35
| DraftStore.Delete | p99 | 7ms | 212ms | 205ms | 2915.55
| ThreadStore.GetThreadForUser | p99 | 22ms | 649ms | 627ms | 2895.08
| ThreadStore.MarkAsRead | p99 | 6ms | 179ms | 173ms | 2797.94
| ChannelStore.CreateInitialSidebarCategories | p99 | 33ms | 959ms | 926ms | 2780.69
| DraftStore.Upsert | p99 | 8ms | 230ms | 222ms | 2729.14
| JobStore.GetAllByStatus | p99 | 16ms | 440ms | 424ms | 2694.58
| SessionStore.UpdateLastActivityAt | p99 | 7ms | 198ms | 191ms | 2690.08
| ChannelStore.GetAllChannelMembersForUser | p99 | 8ms | 231ms | 223ms | 2634.05
| PluginStore.SetWithOptions | p99 | 9ms | 235ms | 226ms | 2520.08
| SessionStore.Save | p99 | 12ms | 305ms | 293ms | 2495.65
| ClusterDiscoveryStore.SetLastPingAt | p99 | 14ms | 365ms | 351ms | 2471.72
| EmojiStore.GetMultipleByName | p99 | 9ms | 242ms | 233ms | 2452.65
| SessionStore.Get | p99 | 14ms | 351ms | 337ms | 2427.72
| PostStore.Save | p99 | 25ms | 617ms | 592ms | 2414.90
| FileInfoStore.Save | p99 | 10ms | 232ms | 222ms | 2310.94
| PreferenceStore.Save | p99 | 20ms | 472ms | 452ms | 2301.41
| ChannelStore.SearchGroupChannels | p99 | 20ms | 488ms | 468ms | 2289.02
| ChannelStore.Save | p99 | 36ms | 846ms | 810ms | 2281.43
| PostStore.GetPosts | p99 | 10ms | 220ms | 210ms | 2199.04
| ChannelStore.UpdateLastViewedAt | p99 | 8ms | 178ms | 170ms | 2197.24
| PostStore.GetPostIdAfterTime | p99 | 5ms | 113ms | 108ms | 2169.15
| ChannelStore.GetMember | p99 | 10ms | 219ms | 209ms | 2146.34
| FileInfoStore.SetContent | p99 | 18ms | 410ms | 392ms | 2133.95
| ChannelStore.GetPublicChannelsForTeam | p99 | 25ms | 534ms | 509ms | 2048.15
| UserStore.Update | p99 | 20ms | 430ms | 410ms | 2025.95
| PostPersistentNotificationStore.Get | p99 | 16ms | 337ms | 321ms | 1987.62
| ChannelStore.GetSidebarCategory | p99 | 35ms | 707ms | 672ms | 1920.10
| PluginStore.Delete | p99 | 5ms | 100ms | 95ms | 1910.14
| CommandWebhookStore.Cleanup | p99 | 5ms | 98ms | 93ms | 1878.34
| ThreadStore.MarkAllAsReadByTeam | p99 | 5ms | 97ms | 92ms | 1858.59
| ChannelBookmarkStore.Delete | p99 | 5ms | 97ms | 92ms | 1858.59
| PostStore.Update | p99 | 25ms | 481ms | 456ms | 1842.15
| ChannelStore.CreateSidebarCategory | p99 | 25ms | 482ms | 457ms | 1839.03
| SessionStore.GetSessionsExpired | p99 | 5ms | 94ms | 89ms | 1797.98
| ThreadStore.GetThreadUnreadReplyCount | p99 | 22ms | 423ms | 401ms | 1796.88
| ChannelMemberHistoryStore.LogJoinEvent | p99 | 7ms | 131ms | 124ms | 1735.69
| JobStore.UpdateStatusOptimistically | p99 | 11ms | 181ms | 170ms | 1603.77
| TeamStore.SaveMember | p99 | 45ms | 718ms | 673ms | 1494.40
| JobStore.UpdateStatus | p99 | 18ms | 270ms | 252ms | 1415.73
| UserStore.UpdateFailedPasswordAttempts | p99 | 11ms | 160ms | 149ms | 1409.78
| WebhookStore.GetOutgoingByTeam | p99 | 30ms | 446ms | 416ms | 1394.40
| ProductNoticesStore.View | p99 | 90ms | 1.317s | 1.227s | 1359.04
| UserStore.UpdateUpdateAt | p99 | 10ms | 139ms | 129ms | 1350.48
| PluginStore.List | p99 | 14ms | 192ms | 178ms | 1253.52
| AuditStore.Save | p99 | 13ms | 168ms | 155ms | 1201.81
| PostStore.GetPostReminderMetadata | p99 | 8ms | 98ms | 90ms | 1158.55
| ChannelStore.GetByName | p99 | 25ms | 288ms | 263ms | 1063.98
| ChannelStore.GetMemberCount | p99 | 37ms | 427ms | 390ms | 1055.15
| UserStore.UpdateLastLogin | p99 | 9ms | 106ms | 97ms | 1044.17
| PostStore.GetPostsSince | p99 | 43ms | 464ms | 421ms | 985.08
| PostPersistentNotificationStore.DeleteExpired | p99 | 35ms | 352ms | 317ms | 899.29
| UserStore.Search | p99 | 50ms | 494ms | 444ms | 893.70
| PreferenceStore.DeleteCategoryAndName | p99 | 43ms | 425ms | 382ms | 893.53
| UserStore.Count | p99 | 24ms | 217ms | 193ms | 804.17
| LinkMetadataStore.Save | p99 | 9ms | 70ms | 61ms | 679.67
| ChannelStore.GetAllChannelMembersNotifyPropsForChannel | p99 | 89ms | 632ms | 543ms | 611.09
| UserStore.GetAllProfilesInChannel | p99 | 431ms | 2.371s | 1.94s | 449.92
| DraftStore.DeleteDraftsAssociatedWithPost | p99 | 43ms | 227ms | 184ms | 430.39
| UserStore.AutocompleteUsersInChannel | p99 | 151ms | 796ms | 645ms | 426.51
| ChannelStore.Autocomplete | p99 | 98ms | 494ms | 396ms | 403.41
| TeamStore.GetActiveMemberCount | p99 | 50ms | 241ms | 191ms | 383.92
| UserStore.Save | p99 | 100ms | 483ms | 383ms | 383.31
| TeamStore.GetTotalMemberCount | p99 | 50ms | 234ms | 184ms | 370.22
| JobStore.GetNewestJobByStatusesAndType | p99 | 5ms | 19ms | 14ms | 281.39
| JobStore.Save | p99 | 5ms | 18ms | 13ms | 250.00
| PostStore.SearchPostsForUser | p99 | 782ms | 2.058s | 1.276s | 163.12
| ChannelStore.AutocompleteInTeamForSearch | p99 | 775ms | 2.033s | 1.258s | 162.34
| PostStore.GetPostReminders | p99 | 8ms | 20ms | 12ms | 145.45
| ProductNoticesStore.ClearOldNotices | p99 | 25ms | 50ms | 25ms | 100.60
| BotStore.Get | p99 | 9ms | 18ms | 9ms | 98.63
| ScheduledPostStore.GetPendingScheduledPosts | p99 | 5ms | 9ms | 4ms | 80.81
### Store times avg (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| UserStore.GetProfilesInChannel | avg | 34ms | 23ms | -11ms | -32.43
### Store times p99 (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| DesktopTokensStore.DeleteOlderThan | p99 | 5ms | 0s | -5ms | -101.01
| StatusStore.UpdateExpiredDNDStatuses | p99 | 20ms | 8ms | -12ms | -60.76
| UserStore.GetProfilesInChannel | p99 | 243ms | 222ms | -21ms | -8.64
### API times avg (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| updateChannelBookmarkSortOrder | avg | 12ms | 443ms | 431ms | 3722.51
| updateChannelBookmark | avg | 6ms | 161ms | 155ms | 2428.04
| getChannelMembers | avg | 5ms | 116ms | 111ms | 2380.89
| getUser | avg | 2ms | 37ms | 35ms | 1979.19
| deleteDraft | avg | 2ms | 34ms | 32ms | 1979.18
| getUserStatusesByIds | avg | 0s | 5ms | 5ms | 1839.80
| getChannelUnread | avg | 2ms | 30ms | 28ms | 1814.11
| getPostThread | avg | 8ms | 139ms | 131ms | 1725.87
| getPostsForChannel | avg | 17ms | 261ms | 244ms | 1461.69
| getChannelsForUser | avg | 2ms | 26ms | 24ms | 1393.14
| deletePost | avg | 14ms | 192ms | 178ms | 1310.93
| viewChannel | avg | 8ms | 110ms | 102ms | 1272.70
| getTeamMember | avg | 1ms | 18ms | 17ms | 1265.40
| getChannelsForTeamForUser | avg | 2ms | 27ms | 25ms | 1228.55
| getChannelMember | avg | 3ms | 34ms | 31ms | 1207.54
| getDrafts | avg | 2ms | 29ms | 27ms | 1199.68
| updatePreferences | avg | 5ms | 59ms | 54ms | 1196.16
| getTeamsUnreadForUser | avg | 3ms | 37ms | 34ms | 1164.83
| getUsersByNames | avg | 2ms | 24ms | 22ms | 1127.82
| searchGroupChannels | avg | 3ms | 34ms | 31ms | 1097.67
| getChannelMembersForTeamForUser | avg | 2ms | 29ms | 27ms | 1095.69
| getTeamsForUser | avg | 2ms | 19ms | 17ms | 1079.13
| patchPost | avg | 19ms | 221ms | 202ms | 1067.61
| saveReaction | avg | 7ms | 80ms | 73ms | 1052.80
| getPreferences | avg | 2ms | 23ms | 21ms | 1049.00
| getChannel | avg | 4ms | 43ms | 39ms | 1044.44
| getThreadsForUser | avg | 3ms | 32ms | 29ms | 1033.58
| getUsers | avg | 3ms | 30ms | 27ms | 995.87
| getAllTeams | avg | 2ms | 20ms | 18ms | 987.65
| listChannelBookmarksForChannel | avg | 2ms | 19ms | 17ms | 977.27
| getTeamMembersForUser | avg | 2ms | 19ms | 17ms | 874.55
| updateReadStateThreadByUser | avg | 26ms | 255ms | 229ms | 864.59
| unfollowThreadByUser | avg | 9ms | 82ms | 73ms | 852.29
| getClientConfig | avg | 3ms | 28ms | 25ms | 828.54
| upsertDraft | avg | 3ms | 26ms | 23ms | 820.83
| setPostReminder | avg | 13ms | 108ms | 95ms | 759.39
| createCategoryForTeamForUser | avg | 17ms | 145ms | 128ms | 756.12
| createChannelBookmark | avg | 14ms | 120ms | 106ms | 737.50
| followThreadByUser | avg | 8ms | 66ms | 58ms | 688.43
| getPostsForChannelAroundLastUnread | avg | 12ms | 82ms | 70ms | 575.05
| updateCategoriesForTeamForUser | avg | 38ms | 236ms | 198ms | 516.92
| logout | avg | 26ms | 149ms | 123ms | 478.52
| updateReadStateAllThreadsByUser | avg | 3ms | 17ms | 14ms | 431.69
| createPost | avg | 167ms | 850ms | 683ms | 409.37
| getCategoriesForTeamForUser | avg | 10ms | 50ms | 40ms | 385.18
| createChannel | avg | 158ms | 752ms | 594ms | 375.80
| createGroupChannel | avg | 244ms | 1.16s | 916ms | 375.59
| getChannelStats | avg | 2ms | 8ms | 6ms | 374.83
| getUsersByIds | avg | 1ms | 4ms | 3ms | 367.36
| addChannelMember | avg | 158ms | 688ms | 530ms | 334.49
| searchPostsInTeam | avg | 33ms | 128ms | 95ms | 284.15
| createDirectChannel | avg | 180ms | 652ms | 472ms | 262.75
| getPublicChannelsForTeam | avg | 13ms | 43ms | 30ms | 230.35
| addTeamMember | avg | 465ms | 1.512s | 1.047s | 225.30
| removeUserCustomStatus | avg | 122ms | 367ms | 245ms | 200.20
| autocompleteUsers | avg | 32ms | 83ms | 51ms | 161.13
| createUser | avg | 127ms | 299ms | 172ms | 135.25
| searchUsers | avg | 27ms | 63ms | 36ms | 132.95
| getFileThumbnail | avg | 31ms | 72ms | 41ms | 132.30
| login | avg | 58ms | 130ms | 72ms | 123.08
| getFilePreview | avg | 38ms | 83ms | 45ms | 118.36
| getTeamStats | avg | 35ms | 75ms | 40ms | 114.96
| searchAllChannels | avg | 32ms | 67ms | 35ms | 108.03
| autocompleteChannelsForTeamForSearch | avg | 57ms | 116ms | 59ms | 102.77
| uploadFileStream | avg | 400ms | 554ms | 154ms | 38.51
| getProfileImage | avg | 66ms | 70ms | 4ms | 6.04
### API times p99 (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| getChannelMembers | p99 | 10ms | 970ms | 960ms | 9746.06
| getChannelUnread | p99 | 5ms | 485ms | 480ms | 9624.52
| updateChannelBookmarkSortOrder | p99 | 25ms | 2.395s | 2.37s | 9537.22
| getPostThread | p99 | 24ms | 2.244s | 2.22s | 9108.52
| getChannelsForUser | p99 | 5ms | 450ms | 445ms | 8913.41
| getUser | p99 | 9ms | 750ms | 741ms | 8715.39
| followThreadByUser | p99 | 10ms | 865ms | 855ms | 8592.96
| viewChannel | p99 | 25ms | 1.957s | 1.932s | 7859.62
| getTeamsUnreadForUser | p99 | 10ms | 750ms | 740ms | 7524.65
| getTeamsForUser | p99 | 5ms | 369ms | 364ms | 7293.80
| listChannelBookmarksForChannel | p99 | 5ms | 367ms | 362ms | 7245.95
| updateReadStateThreadByUser | p99 | 50ms | 3.451s | 3.401s | 6805.69
| getUsersByNames | p99 | 6ms | 408ms | 402ms | 6760.30
| updatePreferences | p99 | 10ms | 718ms | 708ms | 6755.00
| deleteDraft | p99 | 7ms | 492ms | 485ms | 6693.89
| setPostReminder | p99 | 25ms | 1.63s | 1.605s | 6458.75
| getUsers | p99 | 10ms | 591ms | 581ms | 5902.21
| saveReaction | p99 | 23ms | 1.294s | 1.271s | 5579.31
| getChannelsForTeamForUser | p99 | 8ms | 450ms | 442ms | 5513.52
| getThreadsForUser | p99 | 9ms | 489ms | 480ms | 5482.69
| patchPost | p99 | 46ms | 2.426s | 2.38s | 5204.54
| getChannelMembersForTeamForUser | p99 | 9ms | 455ms | 446ms | 5033.09
| getDrafts | p99 | 9ms | 445ms | 436ms | 4976.45
| getAllTeams | p99 | 8ms | 388ms | 380ms | 4774.45
| getTeamMembersForUser | p99 | 8ms | 382ms | 374ms | 4695.85
| deletePost | p99 | 43ms | 2.05s | 2.007s | 4694.87
| getPreferences | p99 | 9ms | 424ms | 415ms | 4620.90
| getTeamMember | p99 | 5ms | 234ms | 229ms | 4584.67
| getClientConfig | p99 | 10ms | 452ms | 442ms | 4442.47
| getPostsForChannelAroundLastUnread | p99 | 40ms | 1.803s | 1.763s | 4409.40
| unfollowThreadByUser | p99 | 22ms | 950ms | 928ms | 4276.50
| upsertDraft | p99 | 10ms | 381ms | 371ms | 3886.60
| updateChannelBookmark | p99 | 24ms | 957ms | 933ms | 3823.79
| createCategoryForTeamForUser | p99 | 25ms | 965ms | 940ms | 3782.70
| getPostsForChannel | p99 | 130ms | 4.903s | 4.773s | 3681.97
| getChannel | p99 | 22ms | 787ms | 765ms | 3477.51
| getCategoriesForTeamForUser | p99 | 25ms | 857ms | 832ms | 3336.81
| getUserStatusesByIds | p99 | 5ms | 159ms | 154ms | 3109.73
| getChannelMember | p99 | 18ms | 550ms | 532ms | 2956.84
| updateCategoriesForTeamForUser | p99 | 95ms | 2.335s | 2.24s | 2357.63
| searchGroupChannels | p99 | 21ms | 490ms | 469ms | 2257.56
| getPublicChannelsForTeam | p99 | 25ms | 534ms | 509ms | 2048.15
| updateReadStateAllThreadsByUser | p99 | 5ms | 97ms | 92ms | 1858.59
| logout | p99 | 86ms | 1.675s | 1.589s | 1847.69
| createChannelBookmark | p99 | 48ms | 910ms | 862ms | 1814.73
| createChannel | p99 | 248ms | 4.731s | 4.483s | 1806.20
| createGroupChannel | p99 | 495ms | 8.846s | 8.351s | 1686.36
| createPost | p99 | 494ms | 8.362s | 7.868s | 1593.32
| addChannelMember | p99 | 450ms | 6.994s | 6.544s | 1455.47
| getUsersByIds | p99 | 5ms | 75ms | 70ms | 1408.66
| addTeamMember | p99 | 987ms | 10s | 9.013s | 913.58
| searchUsers | p99 | 50ms | 498ms | 448ms | 900.42
| createDirectChannel | p99 | 486ms | 4.736s | 4.25s | 874.40
| removeUserCustomStatus | p99 | 248ms | 2.308s | 2.06s | 831.28
| login | p99 | 227ms | 1.923s | 1.696s | 746.57
| getFileThumbnail | p99 | 89ms | 719ms | 630ms | 708.16
| getFilePreview | p99 | 99ms | 778ms | 679ms | 688.65
| getTeamStats | p99 | 50ms | 392ms | 342ms | 687.44
| getChannelStats | p99 | 24ms | 177ms | 153ms | 645.26
| autocompleteUsers | p99 | 121ms | 784ms | 663ms | 549.57
| createUser | p99 | 430ms | 2.405s | 1.975s | 459.30
| searchAllChannels | p99 | 98ms | 512ms | 414ms | 421.71
| searchPostsInTeam | p99 | 782ms | 2.373s | 1.591s | 203.39
| autocompleteChannelsForTeamForSearch | p99 | 775ms | 2.033s | 1.258s | 162.34
| uploadFileStream | p99 | 988ms | 2.366s | 1.378s | 139.49
| deleteChannelBookmark | p99 | 25ms | 50ms | 25ms | 100.60
| getProfileImage | p99 | 266ms | 485ms | 219ms | 82.27
### API times avg (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
### API times p99 (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
### Store times:
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| AuditStore.Save |  Avg| 2ms| 9ms | 7ms | 291.528
| |  P99| 13ms| 168ms | 155ms | 1201.810
| BotStore.Get |  Avg| 2ms| 2ms | 0s | 0.000
| |  P99| 9ms| 18ms | 9ms | 98.630
| ChannelBookmarkStore.Delete |  Avg| 3ms| 17ms | 14ms | 410.546
| |  P99| 5ms| 97ms | 92ms | 1858.586
| ChannelBookmarkStore.Get |  Avg| 1ms| 63ms | 62ms | 4252.788
| |  P99| 5ms| 830ms | 825ms | 16666.667
| ChannelBookmarkStore.GetBookmarksForChannelSince |  Avg| 2ms| 16ms | 14ms | 879.549
| |  P99| 5ms| 270ms | 265ms | 5311.044
| ChannelBookmarkStore.Save |  Avg| 6ms| 74ms | 68ms | 1147.741
| |  P99| 10ms| 482ms | 472ms | 4764.239
| ChannelBookmarkStore.UpdateSortOrder |  Avg| 6ms| 431ms | 425ms | 7492.991
| |  P99| 10ms| 2.395s | 2.385s | 24030.227
| ChannelMemberHistoryStore.LogJoinEvent |  Avg| 2ms| 8ms | 6ms | 275.166
| |  P99| 7ms| 131ms | 124ms | 1735.690
| ChannelStore.Autocomplete |  Avg| 32ms| 66ms | 34ms | 105.598
| |  P99| 98ms| 494ms | 396ms | 403.406
| ChannelStore.AutocompleteInTeamForSearch |  Avg| 57ms| 115ms | 58ms | 101.128
| |  P99| 775ms| 2.033s | 1.258s | 162.338
| ChannelStore.CreateDirectChannel |  Avg| 13ms| 110ms | 97ms | 722.725
| |  P99| 25ms| 996ms | 971ms | 3889.633
| ChannelStore.CreateInitialSidebarCategories |  Avg| 12ms| 66ms | 54ms | 461.758
| |  P99| 33ms| 959ms | 926ms | 2780.692
| ChannelStore.CreateSidebarCategory |  Avg| 15ms| 105ms | 90ms | 588.121
| |  P99| 25ms| 482ms | 457ms | 1839.034
| ChannelStore.Get |  Avg| 1ms| 56ms | 55ms | 4031.704
| |  P99| 6ms| 757ms | 751ms | 13203.376
| ChannelStore.GetAllChannelMembersForUser |  Avg| 2ms| 17ms | 15ms | 655.207
| |  P99| 8ms| 231ms | 223ms | 2634.049
| ChannelStore.GetAllChannelMembersNotifyPropsForChannel |  Avg| 10ms| 39ms | 29ms | 277.336
| |  P99| 89ms| 632ms | 543ms | 611.090
| ChannelStore.GetByName |  Avg| 3ms| 18ms | 15ms | 441.259
| |  P99| 25ms| 288ms | 263ms | 1063.977
| ChannelStore.GetChannelUnread |  Avg| 1ms| 30ms | 29ms | 1987.425
| |  P99| 5ms| 484ms | 479ms | 9606.473
| ChannelStore.GetChannels |  Avg| 2ms| 27ms | 25ms | 1431.291
| |  P99| 7ms| 448ms | 441ms | 6594.113
| ChannelStore.GetChannelsByUser |  Avg| 2ms| 25ms | 23ms | 1382.597
| |  P99| 5ms| 432ms | 427ms | 8554.661
| ChannelStore.GetChannelsWithUnreadsAndWithMentions |  Avg| 2ms| 21ms | 19ms | 1249.583
| |  P99| 5ms| 358ms | 353ms | 7071.751
| ChannelStore.GetFileCount |  Avg| 2ms| 22ms | 20ms | 1214.388
| |  P99| 5ms| 336ms | 331ms | 6626.416
| ChannelStore.GetGuestCount |  Avg| 2ms| 19ms | 17ms | 977.429
| |  P99| 8ms| 325ms | 317ms | 3752.478
| ChannelStore.GetMember |  Avg| 2ms| 14ms | 12ms | 678.480
| |  P99| 10ms| 219ms | 209ms | 2146.335
| ChannelStore.GetMemberCount |  Avg| 14ms| 42ms | 28ms | 197.835
| |  P99| 37ms| 427ms | 390ms | 1055.146
| ChannelStore.GetMemberForPost |  Avg| 4ms| 35ms | 31ms | 876.251
| |  P99| 10ms| 489ms | 479ms | 5004.254
| ChannelStore.GetMemberLastViewedAt |  Avg| 1ms| 13ms | 12ms | 900.278
| |  P99| 5ms| 243ms | 238ms | 4772.705
| ChannelStore.GetMembers |  Avg| 4ms| 116ms | 112ms | 3063.940
| |  P99| 10ms| 970ms | 960ms | 9746.062
| ChannelStore.GetMembersForUser |  Avg| 2ms| 28ms | 26ms | 1136.294
| |  P99| 8ms| 452ms | 444ms | 5673.288
| ChannelStore.GetPinnedPostCount |  Avg| 1ms| 25ms | 24ms | 1851.253
| |  P99| 5ms| 436ms | 431ms | 8638.291
| ChannelStore.GetPublicChannelsForTeam |  Avg| 12ms| 41ms | 29ms | 239.863
| |  P99| 25ms| 534ms | 509ms | 2048.146
| ChannelStore.GetSidebarCategoriesForTeamForUser |  Avg| 10ms| 50ms | 40ms | 389.186
| |  P99| 25ms| 848ms | 823ms | 3302.312
| ChannelStore.GetSidebarCategory |  Avg| 6ms| 40ms | 34ms | 532.035
| |  P99| 35ms| 707ms | 672ms | 1920.098
| ChannelStore.GetTeamChannels |  Avg| 11ms| 47ms | 36ms | 337.788
| |  P99| 25ms| 785ms | 760ms | 3095.704
| ChannelStore.IncrementMentionCount |  Avg| 1ms| 11ms | 10ms | 866.491
| |  P99| 6ms| 199ms | 193ms | 3202.734
| ChannelStore.IsReadOnlyChannel |  Avg| 1ms| 21ms | 20ms | 1470.926
| |  P99| 5ms| 380ms | 375ms | 7514.575
| ChannelStore.Save |  Avg| 8ms| 68ms | 60ms | 760.476
| |  P99| 36ms| 846ms | 810ms | 2281.428
| ChannelStore.SaveMember |  Avg| 20ms| 95ms | 75ms | 368.632
| |  P99| 49ms| 1.753s | 1.704s | 3507.348
| ChannelStore.SearchGroupChannels |  Avg| 3ms| 34ms | 31ms | 1123.366
| |  P99| 20ms| 488ms | 468ms | 2289.024
| ChannelStore.UpdateLastViewedAt |  Avg| 3ms| 12ms | 9ms | 322.728
| |  P99| 8ms| 178ms | 170ms | 2197.242
| ChannelStore.UpdateSidebarCategories |  Avg| 24ms| 141ms | 117ms | 493.063
| |  P99| 49ms| 2.17s | 2.121s | 4300.619
| ChannelStore.UpdateSidebarChannelsByPreferences |  Avg| 1ms| 13ms | 12ms | 1737.586
| |  P99| 5ms| 194ms | 189ms | 3809.284
| ClusterDiscoveryStore.SetLastPingAt |  Avg| 2ms| 22ms | 20ms | 848.532
| |  P99| 14ms| 365ms | 351ms | 2471.716
| CommandWebhookStore.Cleanup |  Avg| 1ms| 28ms | 27ms | 3107.305
| |  P99| 5ms| 98ms | 93ms | 1878.341
| DesktopTokensStore.DeleteOlderThan |  Avg| 1ms| 0s | -1ms | -83.109
| |  P99| 5ms| 0s | -5ms | -101.010
| DraftStore.Delete |  Avg| 2ms| 16ms | 14ms | 642.860
| |  P99| 7ms| 212ms | 205ms | 2915.553
| DraftStore.DeleteDraftsAssociatedWithPost |  Avg| 5ms| 23ms | 18ms | 333.260
| |  P99| 43ms| 227ms | 184ms | 430.392
| DraftStore.Get |  Avg| 1ms| 33ms | 32ms | 2201.952
| |  P99| 7ms| 486ms | 479ms | 7326.636
| DraftStore.GetDraftsForUser |  Avg| 2ms| 27ms | 25ms | 1197.314
| |  P99| 8ms| 410ms | 402ms | 4961.226
| DraftStore.Upsert |  Avg| 2ms| 17ms | 15ms | 633.936
| |  P99| 8ms| 230ms | 222ms | 2729.144
| EmojiStore.GetByName |  Avg| 1ms| 22ms | 21ms | 1640.051
| |  P99| 5ms| 373ms | 368ms | 7384.028
| EmojiStore.GetMultipleByName |  Avg| 2ms| 48ms | 46ms | 2561.022
| |  P99| 9ms| 242ms | 233ms | 2452.647
| FileInfoStore.AttachToPost |  Avg| 4ms| 23ms | 19ms | 472.534
| |  P99| 10ms| 327ms | 317ms | 3228.749
| FileInfoStore.Get |  Avg| 1ms| 22ms | 21ms | 1457.972
| |  P99| 5ms| 386ms | 381ms | 7626.540
| FileInfoStore.GetByIds |  Avg| 1ms| 25ms | 24ms | 1756.451
| |  P99| 5ms| 412ms | 407ms | 8208.656
| FileInfoStore.GetForPost |  Avg| 1ms| 29ms | 28ms | 1980.549
| |  P99| 5ms| 461ms | 456ms | 9129.716
| FileInfoStore.Save |  Avg| 3ms| 18ms | 15ms | 476.500
| |  P99| 10ms| 232ms | 222ms | 2310.938
| FileInfoStore.SetContent |  Avg| 5ms| 26ms | 21ms | 422.762
| |  P99| 18ms| 410ms | 392ms | 2133.949
| GroupStore.AdminRoleGroupsForSyncableMember |  Avg| 1ms| 16ms | 15ms | 1077.346
| |  P99| 5ms| 307ms | 302ms | 6064.453
| GroupStore.GetByName |  Avg| 1ms| 12ms | 11ms | 778.952
| |  P99| 5ms| 220ms | 215ms | 4303.012
| GroupStore.GetGroups |  Avg| 2ms| 22ms | 20ms | 1226.949
| |  P99| 7ms| 395ms | 388ms | 5950.651
| JobStore.Get |  Avg| 1ms| 35ms | 34ms | 2635.524
| |  P99| 5ms| 770ms | 765ms | 14711.538
| JobStore.GetAllByStatus |  Avg| 2ms| 26ms | 24ms | 1368.109
| |  P99| 16ms| 440ms | 424ms | 2694.579
| JobStore.GetCountByStatusAndType |  Avg| 1ms| 2ms | 1ms | 66.977
| |  P99| 5ms| 5ms | 0s | 0.000
| JobStore.GetNewestJobByStatusesAndType |  Avg| 2ms| 2ms | 0s | 0.000
| |  P99| 5ms| 19ms | 14ms | 281.385
| JobStore.Save |  Avg| 2ms| 2ms | 0s | 0.000
| |  P99| 5ms| 18ms | 13ms | 250.000
| JobStore.UpdateOptimistically |  Avg| 2ms| 14ms | 12ms | 555.078
| |  P99| 5ms| 181ms | 176ms | 3384.615
| JobStore.UpdateStatus |  Avg| 2ms| 14ms | 12ms | 491.481
| |  P99| 18ms| 270ms | 252ms | 1415.730
| JobStore.UpdateStatusOptimistically |  Avg| 3ms| 17ms | 14ms | 518.855
| |  P99| 11ms| 181ms | 170ms | 1603.774
| LinkMetadataStore.Get |  Avg| 1ms| 24ms | 23ms | 1772.257
| |  P99| 5ms| 432ms | 427ms | 8550.525
| LinkMetadataStore.Save |  Avg| 3ms| 8ms | 5ms | 193.226
| |  P99| 9ms| 70ms | 61ms | 679.672
| PluginStore.Delete |  Avg| 1ms| 6ms | 5ms | 439.136
| |  P99| 5ms| 100ms | 95ms | 1910.139
| PluginStore.List |  Avg| 2ms| 11ms | 9ms | 578.597
| |  P99| 14ms| 192ms | 178ms | 1253.521
| PluginStore.SetWithOptions |  Avg| 3ms| 14ms | 11ms | 369.869
| |  P99| 9ms| 235ms | 226ms | 2520.076
| PostAcknowledgementStore.GetForPost |  Avg| 1ms| 19ms | 18ms | 1441.360
| |  P99| 5ms| 379ms | 374ms | 7555.556
| PostAcknowledgementStore.GetForPosts |  Avg| 2ms| 34ms | 32ms | 1788.954
| |  P99| 9ms| 742ms | 733ms | 7850.433
| PostPersistentNotificationStore.DeleteExpired |  Avg| 2ms| 17ms | 15ms | 886.350
| |  P99| 35ms| 352ms | 317ms | 899.291
| PostPersistentNotificationStore.Get |  Avg| 1ms| 21ms | 20ms | 1436.083
| |  P99| 16ms| 337ms | 321ms | 1987.616
| PostPersistentNotificationStore.GetSingle |  Avg| 1ms| 20ms | 19ms | 1510.411
| |  P99| 5ms| 395ms | 390ms | 7833.387
| PostPriorityStore.GetForPost |  Avg| 1ms| 22ms | 21ms | 1650.152
| |  P99| 5ms| 378ms | 373ms | 7468.081
| PostPriorityStore.GetForPosts |  Avg| 2ms| 35ms | 33ms | 1787.255
| |  P99| 9ms| 759ms | 750ms | 7924.855
| PostStore.AnalyticsPostCount |  Avg| 261ms| 1.354s | 1.093s | 418.124
| |  P99| 498ms| 498ms | 0s | 0.000
| PostStore.Delete |  Avg| 10ms| 114ms | 104ms | 1081.105
| |  P99| 24ms| 925ms | 901ms | 3695.863
| PostStore.Get |  Avg| 3ms| 52ms | 49ms | 1512.649
| |  P99| 10ms| 822ms | 812ms | 8135.569
| PostStore.GetEtag |  Avg| 2ms| 27ms | 25ms | 1644.019
| |  P99| 8ms| 440ms | 432ms | 5167.684
| PostStore.GetMaxPostSize |  Avg| 0s| 0s | 0s | 0.000
| |  P99| 5ms| 5ms | 0s | 0.000
| PostStore.GetPostIdAfterTime |  Avg| 1ms| 7ms | 6ms | 543.249
| |  P99| 5ms| 113ms | 108ms | 2169.148
| PostStore.GetPostIdBeforeTime |  Avg| 1ms| 11ms | 10ms | 909.834
| |  P99| 5ms| 192ms | 187ms | 3753.503
| PostStore.GetPostReminderMetadata |  Avg| 2ms| 7ms | 5ms | 228.725
| |  P99| 8ms| 98ms | 90ms | 1158.553
| PostStore.GetPostReminders |  Avg| 3ms| 4ms | 1ms | 35.084
| |  P99| 8ms| 20ms | 12ms | 145.455
| PostStore.GetPosts |  Avg| 3ms| 12ms | 9ms | 342.270
| |  P99| 10ms| 220ms | 210ms | 2199.043
| PostStore.GetPostsAfter |  Avg| 2ms| 32ms | 30ms | 1262.691
| |  P99| 8ms| 609ms | 601ms | 7358.317
| PostStore.GetPostsBefore |  Avg| 3ms| 26ms | 23ms | 841.481
| |  P99| 9ms| 417ms | 408ms | 4684.888
| PostStore.GetPostsByThread |  Avg| 4ms| 29ms | 25ms | 700.076
| |  P99| 10ms| 427ms | 417ms | 4225.488
| PostStore.GetPostsSince |  Avg| 7ms| 39ms | 32ms | 468.589
| |  P99| 43ms| 464ms | 421ms | 985.075
| PostStore.GetSingle |  Avg| 1ms| 23ms | 22ms | 1525.821
| |  P99| 5ms| 425ms | 420ms | 8421.243
| PostStore.InvalidateLastPostTimeCache |  Avg| 0s| 0s | 0s | 0.000
| |  P99| 5ms| 5ms | 0s | 0.000
| PostStore.Save |  Avg| 7ms| 46ms | 39ms | 531.207
| |  P99| 25ms| 617ms | 592ms | 2414.904
| PostStore.SearchPostsForUser |  Avg| 28ms| 80ms | 52ms | 187.604
| |  P99| 782ms| 2.058s | 1.276s | 163.124
| PostStore.SetPostReminder |  Avg| 4ms| 27ms | 23ms | 613.396
| |  P99| 9ms| 427ms | 418ms | 4694.755
| PostStore.Update |  Avg| 9ms| 48ms | 39ms | 411.288
| |  P99| 25ms| 481ms | 456ms | 1842.149
| PreferenceStore.DeleteCategoryAndName |  Avg| 3ms| 32ms | 29ms | 979.337
| |  P99| 43ms| 425ms | 382ms | 893.532
| PreferenceStore.Get |  Avg| 2ms| 23ms | 21ms | 1331.915
| |  P99| 9ms| 406ms | 397ms | 4338.414
| PreferenceStore.GetAll |  Avg| 2ms| 22ms | 20ms | 1041.018
| |  P99| 9ms| 402ms | 393ms | 4551.621
| PreferenceStore.Save |  Avg| 5ms| 34ms | 29ms | 589.647
| |  P99| 20ms| 472ms | 452ms | 2301.414
| ProductNoticesStore.ClearOldNotices |  Avg| 13ms| 75ms | 62ms | 486.810
| |  P99| 25ms| 50ms | 25ms | 100.604
| ProductNoticesStore.View |  Avg| 18ms| 85ms | 67ms | 373.680
| |  P99| 90ms| 1.317s | 1.227s | 1359.038
| ReactionStore.GetForPost |  Avg| 2ms| 17ms | 15ms | 654.176
| |  P99| 7ms| 276ms | 269ms | 3988.096
| RoleStore.ChannelHigherScopedPermissions |  Avg| 3ms| 62ms | 59ms | 2069.094
| |  P99| 7ms| 491ms | 484ms | 7065.693
| RoleStore.GetByNames |  Avg| 1ms| 119ms | 118ms | 8901.764
| |  P99| 5ms| 803ms | 798ms | 16121.212
| ScheduledPostStore.GetPendingScheduledPosts |  Avg| 2ms| 2ms | 0s | 0.000
| |  P99| 5ms| 9ms | 4ms | 80.808
| ScheduledPostStore.UpdateOldScheduledPosts |  Avg| 1ms| 1ms | 0s | 0.000
| |  P99| 8ms| 8ms | 0s | 0.000
| SessionStore.Get |  Avg| 3ms| 17ms | 14ms | 506.658
| |  P99| 14ms| 351ms | 337ms | 2427.719
| SessionStore.GetLRUSessions |  Avg| 1ms| 11ms | 10ms | 693.439
| |  P99| 5ms| 218ms | 213ms | 4268.599
| SessionStore.GetSessionsExpired |  Avg| 1ms| 8ms | 7ms | 567.255
| |  P99| 5ms| 94ms | 89ms | 1797.980
| SessionStore.GetSessionsWithActiveDeviceIds |  Avg| 2ms| 21ms | 19ms | 1143.138
| |  P99| 9ms| 385ms | 376ms | 4052.589
| SessionStore.Remove |  Avg| 2ms| 11ms | 9ms | 461.978
| |  P99| 5ms| 167ms | 162ms | 3272.727
| SessionStore.Save |  Avg| 4ms| 19ms | 15ms | 352.116
| |  P99| 12ms| 305ms | 293ms | 2495.647
| SessionStore.UpdateLastActivityAt |  Avg| 3ms| 13ms | 10ms | 384.640
| |  P99| 7ms| 198ms | 191ms | 2690.082
| SharedChannelStore.HasChannel |  Avg| 1ms| 18ms | 17ms | 1365.489
| |  P99| 5ms| 315ms | 310ms | 6229.842
| StatusStore.Get |  Avg| 1ms| 28ms | 27ms | 1874.974
| |  P99| 5ms| 461ms | 456ms | 9126.068
| StatusStore.GetByIds |  Avg| 1ms| 18ms | 17ms | 1196.985
| |  P99| 8ms| 362ms | 354ms | 4676.046
| StatusStore.SaveOrUpdate |  Avg| 2ms| 52ms | 50ms | 2104.891
| |  P99| 8ms| 753ms | 745ms | 8884.918
| StatusStore.UpdateExpiredDNDStatuses |  Avg| 2ms| 1ms | -1ms | -60.710
| |  P99| 20ms| 8ms | -12ms | -60.759
| StatusStore.UpdateLastActivityAt |  Avg| 2ms| 17ms | 15ms | 753.202
| |  P99| 6ms| 236ms | 230ms | 3548.767
| SystemStore.GetByName |  Avg| 1ms| 9ms | 8ms | 960.941
| |  P99| 5ms| 178ms | 173ms | 3478.682
| TeamStore.Get |  Avg| 1ms| 22ms | 21ms | 1700.601
| |  P99| 5ms| 418ms | 413ms | 8293.849
| TeamStore.GetActiveMemberCount |  Avg| 35ms| 64ms | 29ms | 83.934
| |  P99| 50ms| 241ms | 191ms | 383.920
| TeamStore.GetAllPage |  Avg| 1ms| 17ms | 16ms | 1114.993
| |  P99| 5ms| 328ms | 323ms | 6466.701
| TeamStore.GetChannelUnreadsForAllTeams |  Avg| 2ms| 19ms | 17ms | 1003.521
| |  P99| 5ms| 363ms | 358ms | 6850.782
| TeamStore.GetMember |  Avg| 1ms| 11ms | 10ms | 759.854
| |  P99| 5ms| 205ms | 200ms | 4001.625
| TeamStore.GetTeamsByUserId |  Avg| 2ms| 19ms | 17ms | 1121.502
| |  P99| 5ms| 358ms | 353ms | 7076.332
| TeamStore.GetTeamsForUser |  Avg| 2ms| 16ms | 14ms | 892.723
| |  P99| 5ms| 287ms | 282ms | 5643.548
| TeamStore.GetTotalMemberCount |  Avg| 32ms| 60ms | 28ms | 87.853
| |  P99| 50ms| 234ms | 184ms | 370.221
| TeamStore.SaveMember |  Avg| 19ms| 55ms | 36ms | 185.503
| |  P99| 45ms| 718ms | 673ms | 1494.401
| ThreadStore.Get |  Avg| 1ms| 18ms | 17ms | 1353.892
| |  P99| 5ms| 405ms | 400ms | 8080.808
| ThreadStore.GetMembershipForUser |  Avg| 1ms| 23ms | 22ms | 1579.980
| |  P99| 5ms| 412ms | 407ms | 7575.783
| ThreadStore.GetTeamsUnreadForUser |  Avg| 2ms| 30ms | 28ms | 1480.920
| |  P99| 7ms| 555ms | 548ms | 8295.523
| ThreadStore.GetThreadFollowers |  Avg| 1ms| 21ms | 20ms | 1621.590
| |  P99| 5ms| 401ms | 396ms | 7284.963
| ThreadStore.GetThreadForUser |  Avg| 4ms| 37ms | 33ms | 836.655
| |  P99| 22ms| 649ms | 627ms | 2895.080
| ThreadStore.GetThreadUnreadReplyCount |  Avg| 4ms| 30ms | 26ms | 652.735
| |  P99| 22ms| 423ms | 401ms | 1796.875
| ThreadStore.GetThreadsForUser |  Avg| 3ms| 31ms | 28ms | 970.703
| |  P99| 9ms| 465ms | 456ms | 5256.374
| ThreadStore.GetTotalThreads |  Avg| 2ms| 17ms | 15ms | 934.141
| |  P99| 5ms| 330ms | 325ms | 6507.686
| ThreadStore.GetTotalUnreadMentions |  Avg| 2ms| 19ms | 17ms | 913.142
| |  P99| 10ms| 353ms | 343ms | 3600.617
| ThreadStore.GetTotalUnreadThreads |  Avg| 2ms| 17ms | 15ms | 918.572
| |  P99| 5ms| 322ms | 317ms | 6344.320
| ThreadStore.GetTotalUnreadUrgentMentions |  Avg| 2ms| 17ms | 15ms | 834.643
| |  P99| 5ms| 331ms | 326ms | 6269.230
| ThreadStore.MaintainMembership |  Avg| 3ms| 27ms | 24ms | 758.570
| |  P99| 9ms| 404ms | 395ms | 4275.716
| ThreadStore.MarkAllAsReadByChannels |  Avg| 1ms| 14ms | 13ms | 1133.273
| |  P99| 5ms| 192ms | 187ms | 3762.089
| ThreadStore.MarkAllAsReadByTeam |  Avg| 3ms| 17ms | 14ms | 454.025
| |  P99| 5ms| 97ms | 92ms | 1858.586
| ThreadStore.MarkAsRead |  Avg| 2ms| 12ms | 10ms | 418.241
| |  P99| 6ms| 179ms | 173ms | 2797.944
| ThreadStore.UpdateMembership |  Avg| 2ms| 12ms | 10ms | 469.185
| |  P99| 5ms| 181ms | 176ms | 3249.304
| TokenStore.Cleanup |  Avg| 1ms| 65ms | 64ms | 6557.575
| |  P99| 5ms| 244ms | 239ms | 4827.135
| UserAccessTokenStore.GetByToken |  Avg| 1ms| 50ms | 49ms | 3499.372
| |  P99| 5ms| 459ms | 454ms | 9171.717
| UserStore.AutocompleteUsersInChannel |  Avg| 35ms| 89ms | 54ms | 155.117
| |  P99| 151ms| 796ms | 645ms | 426.512
| UserStore.Count |  Avg| 9ms| 27ms | 18ms | 189.715
| |  P99| 24ms| 217ms | 193ms | 804.167
| UserStore.Get |  Avg| 1ms| 18ms | 17ms | 1241.171
| |  P99| 5ms| 310ms | 305ms | 6114.312
| UserStore.GetAllProfiles |  Avg| 2ms| 15ms | 13ms | 604.960
| |  P99| 7ms| 277ms | 270ms | 3744.655
| UserStore.GetAllProfilesInChannel |  Avg| 136ms| 376ms | 240ms | 176.383
| |  P99| 431ms| 2.371s | 1.94s | 449.915
| UserStore.GetByUsername |  Avg| 2ms| 20ms | 18ms | 1011.744
| |  P99| 7ms| 244ms | 237ms | 3361.702
| UserStore.GetForLogin |  Avg| 2ms| 12ms | 10ms | 586.254
| |  P99| 6ms| 229ms | 223ms | 3607.908
| UserStore.GetMany |  Avg| 1ms| 14ms | 13ms | 900.754
| |  P99| 5ms| 218ms | 213ms | 4303.030
| UserStore.GetProfileByIds |  Avg| 2ms| 28ms | 26ms | 1629.864
| |  P99| 7ms| 445ms | 438ms | 6238.888
| UserStore.GetProfilesByUsernames |  Avg| 2ms| 23ms | 21ms | 1158.815
| |  P99| 5ms| 397ms | 392ms | 7159.754
| UserStore.GetProfilesInChannel |  Avg| 34ms| 23ms | -11ms | -32.435
| |  P99| 243ms| 222ms | -21ms | -8.638
| UserStore.GetProfilesNotInChannel |  Avg| 4ms| 45ms | 41ms | 1094.244
| |  P99| 5ms| 1.855s | 1.85s | 37373.737
| UserStore.GetUnreadCount |  Avg| 2ms| 20ms | 18ms | 906.477
| |  P99| 10ms| 368ms | 358ms | 3740.070
| UserStore.IsEmpty |  Avg| 1ms| 7ms | 6ms | 736.977
| |  P99| 5ms| 157ms | 152ms | 3060.348
| UserStore.Save |  Avg| 65ms| 92ms | 27ms | 41.516
| |  P99| 100ms| 483ms | 383ms | 383.314
| UserStore.Search |  Avg| 26ms| 61ms | 35ms | 134.873
| |  P99| 50ms| 494ms | 444ms | 893.698
| UserStore.Update |  Avg| 5ms| 36ms | 31ms | 616.877
| |  P99| 20ms| 430ms | 410ms | 2025.948
| UserStore.UpdateFailedPasswordAttempts |  Avg| 3ms| 10ms | 7ms | 269.064
| |  P99| 11ms| 160ms | 149ms | 1409.777
| UserStore.UpdateLastLogin |  Avg| 4ms| 9ms | 5ms | 141.247
| |  P99| 9ms| 106ms | 97ms | 1044.168
| UserStore.UpdateUpdateAt |  Avg| 4ms| 9ms | 5ms | 139.341
| |  P99| 10ms| 139ms | 129ms | 1350.479
| UserTermsOfServiceStore.GetByUser |  Avg| 1ms| 16ms | 15ms | 1144.594
| |  P99| 5ms| 326ms | 321ms | 6426.444
| WebhookStore.GetOutgoingByTeam |  Avg| 4ms| 28ms | 24ms | 645.523
| |  P99| 30ms| 446ms | 416ms | 1394.399
### API times:
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| addChannelMember | Avg| 158ms| 688ms | 530ms | 334.493
| | P99| 450ms| 6.994s | 6.544s | 1455.470
| addTeamMember | Avg| 465ms| 1.512s | 1.047s | 225.301
| | P99| 987ms| 10s | 9.013s | 913.579
| autocompleteChannelsForTeamForSearch | Avg| 57ms| 116ms | 59ms | 102.768
| | P99| 775ms| 2.033s | 1.258s | 162.338
| autocompleteUsers | Avg| 32ms| 83ms | 51ms | 161.126
| | P99| 121ms| 784ms | 663ms | 549.571
| createCategoryForTeamForUser | Avg| 17ms| 145ms | 128ms | 756.123
| | P99| 25ms| 965ms | 940ms | 3782.696
| createChannel | Avg| 158ms| 752ms | 594ms | 375.804
| | P99| 248ms| 4.731s | 4.483s | 1806.205
| createChannelBookmark | Avg| 14ms| 120ms | 106ms | 737.497
| | P99| 48ms| 910ms | 862ms | 1814.733
| createDirectChannel | Avg| 180ms| 652ms | 472ms | 262.753
| | P99| 486ms| 4.736s | 4.25s | 874.402
| createGroupChannel | Avg| 244ms| 1.16s | 916ms | 375.588
| | P99| 495ms| 8.846s | 8.351s | 1686.361
| createPost | Avg| 167ms| 850ms | 683ms | 409.367
| | P99| 494ms| 8.362s | 7.868s | 1593.318
| createUser | Avg| 127ms| 299ms | 172ms | 135.255
| | P99| 430ms| 2.405s | 1.975s | 459.300
| deleteChannelBookmark | Avg| 14ms| 15ms | 1ms | 6.960
| | P99| 25ms| 50ms | 25ms | 100.604
| deleteDraft | Avg| 2ms| 34ms | 32ms | 1979.183
| | P99| 7ms| 492ms | 485ms | 6693.890
| deletePost | Avg| 14ms| 192ms | 178ms | 1310.930
| | P99| 43ms| 2.05s | 2.007s | 4694.868
| followThreadByUser | Avg| 8ms| 66ms | 58ms | 688.432
| | P99| 10ms| 865ms | 855ms | 8592.965
| getAllTeams | Avg| 2ms| 20ms | 18ms | 987.654
| | P99| 8ms| 388ms | 380ms | 4774.448
| getCategoriesForTeamForUser | Avg| 10ms| 50ms | 40ms | 385.179
| | P99| 25ms| 857ms | 832ms | 3336.806
| getChannel | Avg| 4ms| 43ms | 39ms | 1044.439
| | P99| 22ms| 787ms | 765ms | 3477.506
| getChannelMember | Avg| 3ms| 34ms | 31ms | 1207.539
| | P99| 18ms| 550ms | 532ms | 2956.837
| getChannelMembers | Avg| 5ms| 116ms | 111ms | 2380.894
| | P99| 10ms| 970ms | 960ms | 9746.062
| getChannelMembersForTeamForUser | Avg| 2ms| 29ms | 27ms | 1095.693
| | P99| 9ms| 455ms | 446ms | 5033.089
| getChannelStats | Avg| 2ms| 8ms | 6ms | 374.830
| | P99| 24ms| 177ms | 153ms | 645.265
| getChannelUnread | Avg| 2ms| 30ms | 28ms | 1814.108
| | P99| 5ms| 485ms | 480ms | 9624.515
| getChannelsForTeamForUser | Avg| 2ms| 27ms | 25ms | 1228.555
| | P99| 8ms| 450ms | 442ms | 5513.524
| getChannelsForUser | Avg| 2ms| 26ms | 24ms | 1393.145
| | P99| 5ms| 450ms | 445ms | 8913.413
| getClientConfig | Avg| 3ms| 28ms | 25ms | 828.535
| | P99| 10ms| 452ms | 442ms | 4442.467
| getDrafts | Avg| 2ms| 29ms | 27ms | 1199.681
| | P99| 9ms| 445ms | 436ms | 4976.452
| getFilePreview | Avg| 38ms| 83ms | 45ms | 118.356
| | P99| 99ms| 778ms | 679ms | 688.648
| getFileThumbnail | Avg| 31ms| 72ms | 41ms | 132.296
| | P99| 89ms| 719ms | 630ms | 708.163
| getPostThread | Avg| 8ms| 139ms | 131ms | 1725.875
| | P99| 24ms| 2.244s | 2.22s | 9108.521
| getPostsForChannel | Avg| 17ms| 261ms | 244ms | 1461.689
| | P99| 130ms| 4.903s | 4.773s | 3681.971
| getPostsForChannelAroundLastUnread | Avg| 12ms| 82ms | 70ms | 575.050
| | P99| 40ms| 1.803s | 1.763s | 4409.396
| getPreferences | Avg| 2ms| 23ms | 21ms | 1048.999
| | P99| 9ms| 424ms | 415ms | 4620.896
| getProfileImage | Avg| 66ms| 70ms | 4ms | 6.043
| | P99| 266ms| 485ms | 219ms | 82.271
| getPublicChannelsForTeam | Avg| 13ms| 43ms | 30ms | 230.348
| | P99| 25ms| 534ms | 509ms | 2048.146
| getTeamMember | Avg| 1ms| 18ms | 17ms | 1265.401
| | P99| 5ms| 234ms | 229ms | 4584.665
| getTeamMembersForUser | Avg| 2ms| 19ms | 17ms | 874.551
| | P99| 8ms| 382ms | 374ms | 4695.845
| getTeamStats | Avg| 35ms| 75ms | 40ms | 114.959
| | P99| 50ms| 392ms | 342ms | 687.437
| getTeamsForUser | Avg| 2ms| 19ms | 17ms | 1079.134
| | P99| 5ms| 369ms | 364ms | 7293.796
| getTeamsUnreadForUser | Avg| 3ms| 37ms | 34ms | 1164.831
| | P99| 10ms| 750ms | 740ms | 7524.651
| getThreadsForUser | Avg| 3ms| 32ms | 29ms | 1033.580
| | P99| 9ms| 489ms | 480ms | 5482.691
| getUser | Avg| 2ms| 37ms | 35ms | 1979.192
| | P99| 9ms| 750ms | 741ms | 8715.394
| getUserStatus | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| getUserStatusesByIds | Avg| 0s| 5ms | 5ms | 1839.804
| | P99| 5ms| 159ms | 154ms | 3109.735
| getUsers | Avg| 3ms| 30ms | 27ms | 995.871
| | P99| 10ms| 591ms | 581ms | 5902.212
| getUsersByIds | Avg| 1ms| 4ms | 3ms | 367.364
| | P99| 5ms| 75ms | 70ms | 1408.655
| getUsersByNames | Avg| 2ms| 24ms | 22ms | 1127.816
| | P99| 6ms| 408ms | 402ms | 6760.298
| getWebappPlugins | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| listChannelBookmarksForChannel | Avg| 2ms| 19ms | 17ms | 977.272
| | P99| 5ms| 367ms | 362ms | 7245.946
| login | Avg| 58ms| 130ms | 72ms | 123.085
| | P99| 227ms| 1.923s | 1.696s | 746.570
| logout | Avg| 26ms| 149ms | 123ms | 478.517
| | P99| 86ms| 1.675s | 1.589s | 1847.690
| patchPost | Avg| 19ms| 221ms | 202ms | 1067.612
| | P99| 46ms| 2.426s | 2.38s | 5204.544
| removeUserCustomStatus | Avg| 122ms| 367ms | 245ms | 200.200
| | P99| 248ms| 2.308s | 2.06s | 831.281
| root | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| saveReaction | Avg| 7ms| 80ms | 73ms | 1052.804
| | P99| 23ms| 1.294s | 1.271s | 5579.315
| searchAllChannels | Avg| 32ms| 67ms | 35ms | 108.030
| | P99| 98ms| 512ms | 414ms | 421.712
| searchGroupChannels | Avg| 3ms| 34ms | 31ms | 1097.669
| | P99| 21ms| 490ms | 469ms | 2257.559
| searchPostsInTeam | Avg| 33ms| 128ms | 95ms | 284.150
| | P99| 782ms| 2.373s | 1.591s | 203.394
| searchUsers | Avg| 27ms| 63ms | 36ms | 132.955
| | P99| 50ms| 498ms | 448ms | 900.422
| setPostReminder | Avg| 13ms| 108ms | 95ms | 759.391
| | P99| 25ms| 1.63s | 1.605s | 6458.753
| submitPerformanceReport | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| unfollowThreadByUser | Avg| 9ms| 82ms | 73ms | 852.285
| | P99| 22ms| 950ms | 928ms | 4276.499
| updateCategoriesForTeamForUser | Avg| 38ms| 236ms | 198ms | 516.925
| | P99| 95ms| 2.335s | 2.24s | 2357.631
| updateChannelBookmark | Avg| 6ms| 161ms | 155ms | 2428.045
| | P99| 24ms| 957ms | 933ms | 3823.790
| updateChannelBookmarkSortOrder | Avg| 12ms| 443ms | 431ms | 3722.505
| | P99| 25ms| 2.395s | 2.37s | 9537.223
| updatePreferences | Avg| 5ms| 59ms | 54ms | 1196.162
| | P99| 10ms| 718ms | 708ms | 6754.999
| updateReadStateAllThreadsByUser | Avg| 3ms| 17ms | 14ms | 431.688
| | P99| 5ms| 97ms | 92ms | 1858.586
| updateReadStateThreadByUser | Avg| 26ms| 255ms | 229ms | 864.594
| | P99| 50ms| 3.451s | 3.401s | 6805.695
| updateUserCustomStatus | Avg| 0s| 1ms | 1ms | 1359.145
| | P99| 5ms| 5ms | 0s | 0.000
| uploadFileStream | Avg| 400ms| 554ms | 154ms | 38.512
| | P99| 988ms| 2.366s | 1.378s | 139.486
| upsertDraft | Avg| 3ms| 26ms | 23ms | 820.825
| | P99| 10ms| 381ms | 371ms | 3886.602
| viewChannel | Avg| 8ms| 110ms | 102ms | 1272.701
| | P99| 25ms| 1.957s | 1.932s | 7859.617
